# gpt-racing

./: .gitignore  .gitmodules  .ruff.toml  AGENTS.md  README.md  pyproject.toml  run.sh  shipkit-plan.md  tasks.py  tracks.py  vault.yml
.claude/skills/hatchery-done/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml
.hatchery/: Dockerfile  Dockerfile.claude
.hatchery/tasks/: 2026-03-21-classes.md  2026-03-21-feat-class-rank.md  2026-03-21-feat-penalize-by-name.md  2026-03-21-fix-warnings.md  2026-03-22-fix-class.md  2026-03-22-fix-cli.md  2026-03-22-get-races-from-league.md  2026-03-22-remove-extra-deps.md
configs/gpt/: 24_gt3.jsonnet  25-1_lmp2.jsonnet  25-2_gt4.jsonnet  25_lmp2.jsonnet  26-1.jsonnet  all.jsonnet
scripts/: ingest_pca_results.py
src/gpt_racing/: __init__.py  _testing.py  classes.py  config.py  core.py  elo_mmr.py  iracing_data.py  league.py  output.py  penalties.py  render_tables.py  results.py  summary.py  utils.py  vault.py
src/gpt_racing/cli/: core.py
src/gpt_racing/scoring/: points.py
tests/: conftest.py  test_classes.py  test_cli.py  test_config.py  test_core.py  test_elo_mmr.py  test_integration.py  test_iracing_data.py  test_league.py  test_output.py  test_penalties.py  test_real_integration.py  test_render_tables.py  test_results.py  test_summary.py  test_utils.py
tests/configs/: season_1.jsonnet  season_2.jsonnet
tests/data/ref/tests/test_real_integration.py/TestFullIntegration::test_multi_season/csv/: ELO_race_1.csv  ELO_race_2.csv  ELO_race_3.csv  points_race_1.csv  points_race_2.csv  points_race_3.csv  race_results_race_1.csv  race_results_race_2.csv  race_results_race_3.csv  standings_race_1.csv  standings_race_2.csv  standings_race_3.csv
tests/data/ref/tests/test_real_integration.py/TestFullIntegration::test_multi_season/pdf/: elo_race_1.html  elo_race_2.html  elo_race_3.html  result_race_1.html  result_race_2.html  result_race_3.html  results_race_1.html  results_race_2.html  results_race_3.html  standings_race_1.html  standings_race_2.html  standings_race_3.html
tests/data/ref/tests/test_real_integration.py/TestFullIntegration::test_single_season/csv/: ELO_race_1.csv  ELO_race_2.csv  ELO_race_3.csv  ELO_race_4.csv  ELO_race_5.csv  points_race_1.csv  points_race_2.csv  points_race_3.csv  points_race_4.csv  points_race_5.csv  race_results_race_1.csv  race_results_race_2.csv  race_results_race_3.csv  race_results_race_4.csv  race_results_race_5.csv  standings_race_1.csv  standings_race_2.csv  standings_race_3.csv  standings_race_4.csv  standings_race_5.csv
tests/data/ref/tests/test_real_integration.py/TestFullIntegration::test_single_season/pdf/: elo_race_1.html  elo_race_2.html  elo_race_3.html  elo_race_4.html  elo_race_5.html  result_race_1.html  result_race_2.html  result_race_3.html  result_race_4.html  result_race_5.html  results_race_1.html  results_race_2.html  results_race_3.html  results_race_4.html  results_race_5.html  standings_race_1.html  standings_race_2.html  standings_race_3.html  standings_race_4.html  standings_race_5.html
tests/data/ref/tests/test_render_tables.py/: TestRaceResults::test_basic.html  TestRaceResults::test_no_classes.html  TestRaceResults::test_penalty.html
tests/scoring/: test_points.py
