[project]
name = "gpt-racing"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    {name = "Logan Grado", email = "grado.logan@gmail.com"},
]
dependencies = [
    "click>=8.3.3",
    "iracingdataapi>=1.4.4",
    "pydantic>=2.13.3",
    "jsonnet>=0.22.0",
    "elommr>=1.2.1",
    "polars>=1.40.1",
    "great-tables>=0.12.0",
    "pyarrow>=24.0.0",
    "loggerado>=0.2.0",
    "iracing-oauth-client",
    "ansible-vault>=4.1.0",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.14.3",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "invoke>=3.0.3",
    "ipdb>=0.13.13",
    "ipympl>=0.9.7",
    "ipython>=9.13.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.1",
    "pandoc>=2.4",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.uv.sources]
iracing-oauth-client = { git = "https://github.com/NickBaileyMA/irplc.git" }

[project.scripts]
gpt-scoring = "gpt_racing.cli.core:cli"
